<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".AddPlayers">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="30sp"
        android:text="@string/enter_player_names"
        android:textStyle="bold" />

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:background="@color/dark_blue"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_marginStart="20dp"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@drawable/cross"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cross" />

        <EditText
            android:importantForAutofill="no"
            android:id="@+id/playerOneName"
            android:inputType="text"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_player_one_name"
            android:textAlignment="center"
            android:background="@color/dark_blue"
            android:textColorHint="@color/white_shade1"
            android:textColor="#FFF"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/dark_blue"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_marginStart="20dp"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@drawable/circle"
            android:adjustViewBounds="true"
            android:contentDescription="@string/circle" />

        <EditText
            android:importantForAutofill="no"
            android:id="@+id/playerTwoName"
            android:inputType="text"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_player_two_name"
            android:textAlignment="center"
            android:background="@color/dark_blue"
            android:textColorHint="@color/white_shade1"
            android:textColor="#FFF"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/let_s_go"
        android:gravity="center"
        android:background="@drawable/capsule_button"
        android:textColor="#FFF"
        />

</LinearLayout>