<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_above="@+id/mainBody"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/playerOneProfile"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/board_back_bordered"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerOneName"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/player_one"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"/>

            <ImageView
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/cross"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/cross" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/playerTwoProfile"
            android:layout_width="118dp"
            android:layout_height="118dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/board_back"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playerTwoName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/player_two"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/circle"
                android:contentDescription="@string/circle" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:background="@drawable/board_back_last"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <ImageView
                android:id="@+id/image1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/board_back"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/transparent"
                android:contentDescription="@string/notset" />

            <ImageView
                android:id="@+id/image2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/board_back"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/transparent"
                android:contentDescription="@string/notset" />

            <ImageView
                android:contentDescription="@string/notset"
                android:id="@+id/image3"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/board_back"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <ImageView
                android:contentDescription="@string/notset"
                android:id="@+id/image4"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/board_back"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/transparent"/>

            <ImageView
                android:contentDescription="@string/notset"
                android:id="@+id/image5"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/board_back"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/transparent"/>

            <ImageView
                android:contentDescription="@string/notset"
                android:id="@+id/image6"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/board_back"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <ImageView
                android:contentDescription="@string/notset"
                android:id="@+id/image7"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/board_back"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/transparent"/>

            <ImageView
                android:contentDescription="@string/notset"
                android:id="@+id/image8"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/board_back"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/transparent"/>

            <ImageView
                android:contentDescription="@string/notset"
                android:id="@+id/image9"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/board_back"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:src="@drawable/transparent"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>